--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,4 +24,8 @@ jobs:
           ref: 'gh-pages'
       - name: Check updated files
         run: git status
+      - name: Commit files
+        run: git commit statsforecast
+      - name: Push files
+        run: git push origin main
 
