--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
       - name: Configure git
         run: |
           git config --global user.name "Mintie Bot"
