--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -48,8 +48,12 @@ jobs:
         run: rm -rf */.git
 
       - name: Check for modified files
-        run: '! git diff-files --quiet'
-        shell: bash
+        run: |
+          if git diff-files --quiet; then
+            (exit 1)
+          else
+            (exit 0)
+          fi
         continue-on-error: true
       # only runs when changed files are detected
       - name: Push files
