--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,9 +50,9 @@ jobs:
       - name: Check for modified files
         run: |
           if git diff-files --quiet; then
-            (exit 1)
+            exit 1
           else
-            (exit 0)
+            exit 0
           fi
         continue-on-error: true
       # only runs when changed files are detected
