--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -48,12 +48,7 @@ jobs:
         run: rm -rf */.git
 
       - name: Check for modified files
-        run: |
-          if git diff-files --quiet; then
-            exit 1
-          else
-            exit 0
-          fi
+        run: exit 1
         continue-on-error: true
       # only runs when changed files are detected
       - name: Push files
