use diff-index after add

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,15 +50,12 @@ jobs:
       # only runs when changed files are detected
       - name: Push changes
         run: |
-          git diff-files
-          git diff-files --quiet
-          echo $?
-          if git diff-files --quiet; then
+          git config user.name "Mintie Bot"
+          git config user.email "aws@mintlify.com"
+          git add .
+          if git diff-index --quiet --cached HEAD -- ; then
             echo 'No changes detected, skipping...'
           else
-            git config user.name "Mintie Bot"
-            git config user.email "aws@mintlify.com"
-            git add .
             git commit -m "update"
             git push origin main
           fi
