--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,6 +47,50 @@ jobs:
       - name: Remove .git folders
         run: rm -rf */.git
 
+      - name: Compile mint.json
+        run: |
+          jq -s '{
+            config: .[0],
+            navigations: [
+              {
+                name: "statsforecast",
+                groups: .[1]
+              },
+              {
+                name: "mlforecast",
+                groups: .[2]
+              },
+              {
+                name: "neuralforecast",
+                groups: .[3]
+              },
+              {
+                name: "hierarchicalforecast",
+                groups: .[4]
+              }
+            ]
+          }
+          | .navigations |= map(
+            .name as $prefix 
+            | .groups |= walk(
+              if type == "array" 
+                then map(
+                  if type == "string"
+                    then $prefix + "/" + .
+                    else .
+                  end
+                )
+                else . 
+              end
+            )
+          )
+          | .config.navigation = (
+            [.navigations[].groups]
+            | add
+          ) 
+          | .config' mint.json a/navigation.json b/navigation.json c/navigation.json d/navigation.json > mint-temp.json
+          mv mint-temp.json mint.json
+
       # only runs when changed files are detected
       - name: Push changes
         run: |
