--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -14,10 +14,11 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
       - name: Run mintlify github action
-        uses: mintlify/mintlify-multirepo-action@v0.8
+        uses: mintlify/mintlify-multirepo-action@v0.9
         with:
           token: ${{ secrets.PUSH_TOKEN }}
           target-branch: docs
+          force: true
           repos: |
             - owner: Nixtla
               repo: nixtla
