--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
       - name: Run mintlify github action
-        uses: mintlify/multirepo-action@v0.12
+        uses: mintlify/multirepo-action@v0.13
         with:
           token: ${{ secrets.PUSH_TOKEN }}
-          target-branch: docs
+          target-branch: foo
           repos: |
             - owner: nixtla
               repo: nixtla
