--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
+      - name: cat git config
+        run: cat .git/config
       - name: Run mintlify github action
         uses: mintlify/multirepo-action@v0.13
         with:
