--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
       - name: check git access
-        run: git ls-remote --heads --exit-code origin foo
+        run: git ls-remote --heads --exit-code origin docs
       - name: Run mintlify github action
         uses: mintlify/multirepo-action@v0.13
         with:
