--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v3
       - name: check git access
         run: git ls-remote --heads --exit-code origin docs
+      - name: check git path
+        run: which git
       - name: Run mintlify github action
         uses: mintlify/multirepo-action@v0.13
         with:
