--- a/.github/workflows/mintlify-action.yml
+++ b/.github/workflows/mintlify-action.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: main
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
-  repository_dispatch: 
-      types: [docs_updated]
+  repository_dispatch:
+    types: [docs_updated]
 
 concurrency:
   group: mintlify-multirepo-action
@@ -46,7 +46,4 @@ jobs:
               ref: docs
             - owner: nixtla
               repo: datasetsforecast
-              ref: docs
-            - owner: nixtla
-              repo: coreforecast
               ref: docs
